--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   Safari Zone Encounter Slot Calculator
   </title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   
@@ -831,7 +832,6 @@
 <body>
 <h2>What this does</h2>
 <p>This calculator is a tool to help determine the encounter slots for the HeartGold &amp; SoulSilver Safari Zone. Simply enter in the information for each field and click Calculate to determine which Pok&eacute;mon occupy which encounter slots. The encounter slot tables and time for each block upgrade can be found on the <a href="https://sites.google.com/site/pokemonslots/gen-iv/safari-zone" target="_blank">Safari Zone slot webpage</a>. Enjoy!</p>
-<p> ~ shiny finder</p>
 
 <h2>Terms</h2>
 <dl>
@@ -842,7 +842,7 @@
   <strong><dt>Encounter Method</dt></strong>
     <dd>How you encounter the Pok&eacute;mon. The options are in grass (land), surfing (water), or fishing (old/good/super rod).</dd>
   <strong><dt>Block Scores</dt></strong>
-    <dd>The <em>total</em> value of the block types in your area. Each block "levels up" after a certain amount of time of being placed in the area, allowing it to count as multiple blocks. See the "Block Scores" tab on the <a href="https://sites.google.com/site/pokemonslots/gen-iv/safari-zone" target="_blank">encouter slots</a> for these time periods.</dd>
+    <dd>The <em>total</em> value of the block types in your area. Each block "levels up" after a certain amount of time of being placed in the area, allowing it to count as multiple blocks. See the "Block Scores" tab on the <a href="https://sites.google.com/site/pokemonslots/gen-iv/safari-zone" target="_blank">encounter slots</a> for these time periods.</dd>
   <strong><dt>Slot Number</dt></strong>
     <dd>The encounter slot number that is occupied. These values correspond to those in the RNG Reporter/PPRNG for each frame.</dd>
   <strong><dt>lvl</dt></strong>
@@ -923,5 +923,7 @@
     <td id="ESResults"></td>
   </tr>
 </table>
+  
+  <p>Questions/Comments/Concerns can be directed to shiny finder on <a href="https://www.smogon.com/forums/members/shiny-finder.206479/">Smogon</a> (preferable) or as an issue on <a href="https://github.com/shinyfinder">GitHub</a>.</p>
 </body>
 </html>
