--- a/index.html
+++ b/index.html
@@ -924,6 +924,7 @@
   </tr>
 </table>
   
-  <p>Questions/Comments/Concerns can be directed to shiny finder on <a href="https://www.smogon.com/forums/members/shiny-finder.206479/">Smogon</a> (preferable) or as an issue on <a href="https://github.com/shinyfinder">GitHub</a>.</p>
+  <h3>Credits</h3>
+  <p>Questions/comments/concerns can be directed to shiny finder on <a href="https://www.smogon.com/forums/members/shiny-finder.206479/" target="_blank">Smogon</a> (preferable) or as an issue on <a href="https://github.com/shinyfinder" target="_blank">GitHub</a>.</p>
 </body>
 </html>
