fix typo in lvl

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
              ES = ["Bellsprout (15)", "Pidgey (15)",  "Bellsprout (15)",  "Bellsprout (16)",  "Pidgey (16)",  "Mr. Mime (16)",  "Bellsprout (17)",   "Pidgey (17)",  "Mr. Mime (17)", "Misdreavus (17)"];
              blockES = ["Mr. Mime (45)", "Budew (47)", "Misdreavus (42", "Shuppet (46)", "Electabuzz (41)",  "Bronzong (45)",  "Beldum (44)",  "Lickitung (40)",  "Bidoof (40)",  "Surskit (42)"];
           } else if (TOD == "night") {
-            ES = ["Bellsprout 15", "Gastly (15)",  "Misdreavus (15)",  "Bellsprout (16)",  "Haunter (16)",  "Misdreavus (16)",  "Bellsprout (17)",   "Gastly (17)",  "Misdreavus (17)", "Haunter (17)"];
+            ES = ["Bellsprout (15)", "Gastly (15)",  "Misdreavus (15)",  "Bellsprout (16)",  "Haunter (16)",  "Misdreavus (16)",  "Bellsprout (17)",   "Gastly (17)",  "Misdreavus (17)", "Haunter (17)"];
             blockES = ["Mr. Mime (45)", "Budew (47)", "Misdreavus (42)", "Shuppet (47)",  "Electabuzz (41)",  "Bronzong (44)" ,  "Beldum (44)",   "Lickitung (40)", "Bidoof (40)", "Surskit (42)"];
           };
 
