--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="Refresh" content="0; url='https://shinyfinder.github.io/tools/safari-zone-calc/index.html'" />
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
